--- a/index.qmd
+++ b/index.qmd
@@ -97,6 +97,7 @@ using Statistics
 using LaTeXStrings
 using DimensionalData
 using NaturalEarth
+using Dates
 ```
 
 ## Implementing K-means Clustering
@@ -279,6 +280,8 @@ end
 
 Visualize the anomalies for a sample day:
 
+###streamfunction anomalies 
+
 ```{julia}
 function plot_streamfunction_anomaly(sample_date::Date)
     subset = ψ_anomaly[time=At(sample_date)]
@@ -293,7 +296,7 @@ function plot_streamfunction_anomaly(sample_date::Date)
     Colorbar(fig[1, 2], hm, label=L"Streamfunction Anomaly ($10^6$ m$^2$/s)")
     fig
 end
-plot_streamfunction_anomaly(Date(2015, 12, 14))
+plot_streamfunction_anomaly(Date(2018, 12, 14))
 ```
 
 ### Step 1: Principal Component Analysis
@@ -328,7 +331,7 @@ total_var = var(pca_model_full)
 explained_var_ratio_full = explained_var_full ./ total_var
 ```
 
-Create a scree plot to help choose the number of PCs to retain:
+Create a screen plot to help choose the number of PCs to retain:
 
 ```{julia}
 let
@@ -506,7 +509,7 @@ end
 Based on the elbow plot, choose a number of clusters and run k-means:
 
 ```{julia}
-n_clusters = 6
+n_clusters = 7
 result = kmeans(pc_scores_scaled, n_clusters; verbose=true)
 
 println("\nConverged: $(result.converged)")
@@ -589,8 +592,25 @@ It better represents a minimum distance between two points.
 ### Weather Typing Analysis
 
 - Visualize streamfunction anomalies for at least 3 different days. Then, identify the weather types for each day. How well do individual days match their cluster composite patterns?
+
+I chose to look at 2016-12-14,weather type 6, 2017-12-14, weather type 1, and 2018-12-14, weather type 5. The first day had significuntly less negative intensity when the weather type, the second day matched really well, the third day had more intense positive corner.
+
 - Do your EOF spatial patterns match those shown in the paper?
+
+They match the one in the paper very well, escept for the fact that they are less smoothed out.
+
 - Do your weather type composites used with default settings (approximately matching the paper) match those in the paper? If not, why might they differ?
+
+They do; however, my most common weather type is not the same as the most common type reported in the paper. This discrepancy may be due to the fact that my dataset extends through 2025, whereas the paper was published in 2015, meaning that certain patterns may have become more or less frequent over time. Additionally, I selected seven weather types instead of six, which can also shift the relative frequencies of the resulting clusters.
+
 - What is the effect of changing the number of retained PCs on the weather type patterns?
+
+More PC should give more noisy data. Less PC would mean that the weather types are going to be less different from each other. 
+
 - What is the effect of rescaling PCs before clustering? Try clustering without rescaling and compare results.
+
+In theory, our weather types should become more dominated by PC1 and PC2, since they are more influential when the PCs are not rescaled. What I found was that the number of days assigned to Weather Type 1 increased, and the overall distribution of days across weather types changed, with Types 3 through 5 shifting in their relative frequencies.
+
 - What is the impact of changing the number of clusters (k) on the weather type patterns?
+
+If we increase number K then weather types become too similar to each other. If we decrease the number of K from the optimal one we might miss que weather types.
